syntax = "proto3";

option go_package = "./intapi";

service WashBonus {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  rpc Begin(BeginRequest) returns(BeginAnswer);
  rpc Refresh(RefreshRequest) returns(RefreshAnswer);
  rpc End(FinishRequest) returns(FinishAnswer);
}

message ErrorMsg{
  int64 code = 1;
  string msg = 2;
}

message HealthCheckRequest{
  string serviceKey = 1;
};
message HealthCheckResponse{
  bool ok = 1;
  ErrorMsg error = 2;
}

message BeginRequest{
  string serviceKey = 1;
  int64 postID = 2;
}
message BeginAnswer{
  string sessionID = 1;
  string sessionQR = 2;
  ErrorMsg error = 3;
}

message RefreshRequest{
  string serviceKey = 1;
  string sessionID = 2;
}
message RefreshAnswer{
  string userID = 1;
  string addAmount = 2;
  ErrorMsg error = 3;
}

message FinishRequest{
  string serviceKey = 1;
  string sessionID = 2;
  string unusedBalance = 3;
}
message FinishAnswer{
  ErrorMsg error = 1;
}